--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,13 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-dom": "18.0.10",
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
